# src/Controller/AlbumController.php
@@ -2,20 +2,24 @@
 
 namespace App\Controller;
 
-use App\Service\AlbumService;
 use App\DTO\AlbumDTORequest;
+use App\Entity\Album;
+use App\Repository\AlbumRepository;
+use App\Service\AlbumService;
 use Symfony\Bundle\FrameworkBundle\Controller\AbstractController;
 use Symfony\Component\HttpFoundation\JsonResponse;
 use Symfony\Component\HttpFoundation\Request;
 use Symfony\Component\Routing\Annotation\Route;
+use Symfony\Component\Serializer\SerializerInterface;
 use Symfony\Component\Validator\Validator\ValidatorInterface;
 use Symfony\Component\Validator\ConstraintViolationList;
 
 class AlbumController extends AbstractController
 {
     const BAD_REQUEST_STATUS_CODE = 400;
+    const CREATED_STATUS_CODE = 201;
 
-    #[Route('/albums', name: 'app_album')]
+    #[Route('/albums', name: 'app_album', methods: ['GET'])]
     public function index(AlbumService $album_service, Request $request, ValidatorInterface $validator): JsonResponse
     {
         $request_dto = new AlbumDTORequest();
@@ -37,6 +41,75 @@ class AlbumController extends AbstractController
                 self::BAD_REQUEST_STATUS_CODE
             );
         }
+    }
+
+    #[Route('/albums', name: 'app_album_create', methods: ['POST'])]
+    public function create(Request $request, AlbumRepository $repository, ValidatorInterface $validator, SerializerInterface $serializer): JsonResponse
+    {
+        $album = $serializer->deserialize($request->getContent(), Album::class, 'json');
+        $errors = $validator->validate($album);
+        if (count($errors) === 0) {
+            $repository->save($album, true);
+
+            return $this->json(
+                ['data' => $album],
+                self::CREATED_STATUS_CODE
+            );
+        } else {
+            return $this->json(
+                [ 'errors' => $this->buildErrorMessages($errors) ],
+                self::BAD_REQUEST_STATUS_CODE
+            );
+        }
+    }
+
+    #[Route('/albums/{id}', name: 'app_album_update', methods: ['PUT'])]
+    public function edit(Request $request, int $id, AlbumRepository $repository, ValidatorInterface $validator): JsonResponse
+    {
+        $album = $repository->find($id);
+
+        if (!$album) {
+            return $this->json(
+                ['errors' => [['source' => 'id', 'detail' => 'does not exist']]],
+                self::BAD_REQUEST_STATUS_CODE
+            );
+        }
+
+        $body_data = json_decode($request->getContent(), true);
+        if (!empty($body_data['title'])) {
+            $album->setTitle($body_data['title']);
+        }
+
+        $errors = $validator->validate($album);
+        if (count($errors) === 0) {
+            $repository->save($album, true);
+
+            return $this->json(
+                ['data' => $album],
+            );
+        } else {
+            return $this->json(
+                [ 'errors' => $this->buildErrorMessages($errors) ],
+                self::BAD_REQUEST_STATUS_CODE
+            );
+        }
+    }
+
+    #[Route('/albums/{id}', name: 'app_album_delete', methods: ['DELETE'])]
+    public function delete(Request $request, int $id, AlbumRepository $repository): JsonResponse
+    {
+        $album = $repository->find($id);
+
+        if (!$album) {
+            return $this->json(
+                ['errors' => [['source' => 'id', 'detail' => 'does not exist']]],
+                self::BAD_REQUEST_STATUS_CODE
+            );
+        }
+
+        $repository->remove($album, true);
+
+        return $this->json($album);
     }
 
     private function buildErrorMessages(ConstraintViolationList $errors): array
